--- a/BucBoard/BucBoard/BucBoard.csproj
+++ b/BucBoard/BucBoard/BucBoard.csproj
@@ -162,6 +162,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Alert.cs">
+      <DependentUpon>BucBoardDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BucBoardDB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -180,24 +183,17 @@
     <Compile Include="Models\Calendar.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\CustomEvent.cs">
-      <DependentUpon>BucBoardDB.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Event.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Message.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Premade.cs">
-      <DependentUpon>BucBoardDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Recurring.cs">
-      <DependentUpon>BucBoardDB.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\MultipleModelPass.cs" />
     <Compile Include="Models\User.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserListModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
