--- a/BucBoard/BucBoard/Web.config
+++ b/BucBoard/BucBoard/Web.config
@@ -74,6 +74,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="bucboardEntities" connectionString="metadata=res://*/Models.BucBoardDB.csdl|res://*/Models.BucBoardDB.ssdl|res://*/Models.BucBoardDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bucboard.database.windows.net;initial catalog=bucboard;user id=bucboard;password=se2fall2018!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="bucboardEntities1" connectionString="metadata=res://*/Models.BucBoardDB.csdl|res://*/Models.BucBoardDB.ssdl|res://*/Models.BucBoardDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bucboard.database.windows.net;initial catalog=bucboard;user id=bucboard;password=se2fall2018!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
