--- a/BucBoard/BucBoard/BucBoard.csproj
+++ b/BucBoard/BucBoard/BucBoard.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Models\Alert.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppointmentModel.cs" />
     <Compile Include="Models\BucBoardDB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -188,6 +189,7 @@
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\InOffice.cs" />
+    <Compile Include="Models\LoadAppointments.cs" />
     <Compile Include="Models\Message.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
@@ -196,6 +198,7 @@
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\OfficeHourLocal.cs" />
+    <Compile Include="Models\SendEmailModel.cs" />
     <Compile Include="Models\User.cs">
       <DependentUpon>BucBoardDB.tt</DependentUpon>
     </Compile>
@@ -244,6 +247,7 @@
       <DependentUpon>BucBoardDB.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\fullcalendar.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
@@ -254,6 +258,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -272,6 +277,11 @@
     <Content Include="Views\BucLogin\BucRegister.cshtml" />
     <Content Include="Views\Dashboard\Dashboard.cshtml" />
     <Content Include="Views\Dashboard\Manage.cshtml" />
+    <Content Include="Views\Dashboard\_BucOfficeHours.cshtml" />
+    <Content Include="Views\Home\Appointment.cshtml" />
+    <Content Include="Views\Home\Email.cshtml" />
+    <Content Include="Views\Home\SendEmailView.cshtml" />
+    <Content Include="Views\Shared\Popup.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
